@@ -395,12 +395,25 @@ class DefaultController(Controller):
 
     def delete_facts_and_their_cards(self, facts):
         db = self.database()
+        w = self.main_widget()
+        w.set_progress_text(_("Deleting cards..."))
+        w.set_progress_range(len(facts))
+        w.set_progress_update_interval(50)
         for fact in facts:
             for card in db.cards_from_fact(fact):
                 self.scheduler().remove_from_queue_if_present(card)
-                db.delete_card(card)
+                db.delete_card(card, check_for_unused_tags=False)
             db.delete_fact(fact)
+            w.increase_progress(1)
+        tags = db.tags()
+        w.set_progress_text(_("Checking for unused tags..."))
+        w.set_progress_range(len(tags))
+        tags = db.tags()
+        for tag in tags:
+            db.delete_tag_if_unused(tag)
+            w.increase_progress(1)
         db.save()
+        w.close_progress()
 
     def clone_card_type(self, card_type, clone_name):
         from mnemosyne.libmnemosyne.utils import mangle
