@@ -5,6 +5,9 @@
  the set and closes the window (requested by Michael Campbell).
 -In 'edit cards', make more robust of no longer warning about discarding
  changes if you did not make any.
+-Sped up deleting of large number of cards from the card browser.
+-When pasting into the "Add cards" or "Edit cards" dialog, respect the
+ formatting of the card field.
 -Changing card types and deleting cards from the card browser is now faster.
 -Fix harmless error message when converting to Cloze cards in the card browser
  (reported my Michael Campbell).
